--- a/BioDymMSE/MSE.Rnw
+++ b/BioDymMSE/MSE.Rnw
@@ -21,6 +21,19 @@ ToDo
 
 The MSE runs on the ple4 dataset but it can be adapted to other datasets. The OM is conditioned using the stock assessment results and distinct S/R. The MP is based on the usual MSY HCR, with a $B_{trigger}$ and a $F_{target}$, and an additional harvest rate limit. All is dealt in relative terms. The stock status is estimated with a biomass dynamic model. The OEM introduces variability on the abundance index and bias both on the abundance index and catches. The IEM introduces bias on the catch. The bias on catch, both on the OEM and IEM must be linked so that catches on the OM are of the same level.
 
+<<echo=FALSE, results=hide>>=
+library(FLAdvice)
+library(FLBioDym)
+library(xtable)
+library(Hmisc)
+load("example/.RData")
+source("example/funs.R")
+@
+
+<<>>=
+sessionInfo()
+@
+
 \section{Methods}
 
 \begin{itemize}
@@ -50,7 +63,60 @@ The MSE runs on the ple4 dataset but it can be adapted to other datasets. The OM
 	
 	$\hat{I}_{t} = B_{t} \gamma_{t}$ where $\gamma \sim LN(\lambda, \sigma_{I}^2)$ and $\lambda \sim U(0.95srvBias, 1.05srvBias)$	
 		
-\end{itemize}	 
+\end{itemize}	
+
+\section{Results}
+
+\begin{table}[h]
+\caption{Simulation scenarios}
+<<results=tex, echo=FALSE>>=
+latex(scn, longtable=TRUE, file="", first.hline.double=FALSE)
+@
+\end{table}
+
+\begin{figure}[H]
+\centering
+<<fig=TRUE, echo=FALSE>>=
+lst0 <- lst[1:3]
+names(lst0) <- c("lag1","lag3","lag5")
+plot(window(FLStocks(lst0), start=2000))
+@
+\caption{Projections with assessment lags of 1,3 and 5 years}
+\label{fig:lags}
+\end{figure}
+ 
+\begin{figure}[H]
+\centering
+<<fig=TRUE, echo=FALSE>>=
+lst0 <- lst[c(3,6)]
+names(lst0) <- c("nobias","bias 0.5")
+plot(window(FLStocks(lst0), start=2000))
+@
+\caption{Projections with bias on the index of abundance}
+\label{fig:srvBias}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+<<fig=TRUE, echo=FALSE>>=
+lst0 <- lst[c(3,9)]
+names(lst0) <- c("nobias","bias 0.5")
+plot(window(FLStocks(lst0), start=2000))
+@
+\caption{Projections with bias on catches}
+\label{fig:cthBias}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+<<fig=TRUE, echo=FALSE>>=
+lst0 <- lst[c(3,12)]
+names(lst0) <- c("nobias","bias 0.5")
+plot(window(FLStocks(lst0), start=2000))
+@
+\caption{Projections with bias on catches and index}
+\label{fig:2Bias}
+\end{figure}
 
 \end{document}
 
