--- a/BioDymMSE/MSE.tex
+++ b/BioDymMSE/MSE.tex
@@ -44,16 +44,19 @@ attached base packages:
 [8] methods   base     
 
 other attached packages:
- [1] Hmisc_3.9-1      survival_2.36-12 xtable_1.6-0     FLBioDym_0.1.2  
- [5] FLAdvice_1.0     ggplotFL_0.1     ggplot2_0.8.9    proto_0.3-9.2   
- [9] reshape_0.8.4    plyr_1.7.1       akima_0.5-7      FLash_2.5.0     
-[13] FLCore_2.5.0     lattice_0.20-6  
+ [1] Hmisc_3.9-3      survival_2.36-14 xtable_1.7-0     plyr_1.7.1      
+ [5] FLBioDym_0.1.2   FLAdvice_1.0     ggplotFL_0.1     ggplot2_0.9.1   
+ [9] akima_0.5-7      FLash_2.5.0      FLCore_2.5.0     lattice_0.20-6  
 
 loaded via a namespace (and not attached):
-[1] cluster_1.14.1 stats4_2.15.0  tools_2.15.0  
+ [1] cluster_1.14.2     colorspace_1.1-1   dichromat_1.2-4    digest_0.5.2      
+ [5] labeling_0.1       MASS_7.3-18        memoise_0.1        munsell_0.3       
+ [9] proto_0.3-9.2      RColorBrewer_1.0-5 reshape2_1.2.1     scales_0.2.1      
+[13] stats4_2.15.0      stringr_0.6        tools_2.15.0      
 \end{Soutput}
 \end{Schunk}
 
+\pagebreak
 \section{Methods}
 
 \begin{itemize}
@@ -69,7 +72,13 @@ loaded via a namespace (and not attached):
 	
 	\item Implementation Error Model
 	
-	$Y_{t}=\frac{TAC_{t}}{\alpha_{t}}$
+	$Y_{t}=\frac{TAC_{t}}{\beta_{t}}$ where $\beta \sim U(0.95\eta, 1.05\eta)$ 
+	
+	$\eta=a+b(TAC)$ if $TAC>min(C)$ or $TAC<max(C)$ 
+	
+	$\eta=1$ if $TAC>max(C)$ 
+
+	$\eta=cthBias$ if $TAC<min(C)$ 
 
 	\item Management Procedure
 	
@@ -85,7 +94,14 @@ loaded via a namespace (and not attached):
 		
 \end{itemize}	
 
-\section{Results}
+The scenarios simulated try to give insights about the doubts raised during the discussion of the factors that could have an impact on the estimation of MSY and indirectly on catch surplus.
+
+\begin{itemize}
+	\item Underestimation of catches - which is being modelled through the introduction of bias in catches provided to the assessment model by the OEM. It reflects the situation where company owners under-report catches to the coastal state. 
+	\item Abundance index low quality - which is being modelled trough the introduction of bias and variability on the abundance index provided to the assessment model by the OEM. Bias models the effect of having surveys that don't cover the full distribution of the stock. A bias smaller than 1 reflects an underestimation of biomass and vice versa. It's common to use exploratory fishing surveys, which will most of the times look for hot spots of abundance and their estimates of abundance will most likely biased towards higher than reality abundances. On the other hand mixing surveys from different periods and carried out with several vessels, will increase the variability of the abundance index. 
+	\item Lag between assessments - is modelled trough the introduction of years without assessment during which the TAC is kept constant as computed on the last assessment. More sophisticated approaches could be implemented if time allows. The simulation assumes that lags between assessments are regular, which is not (always ?) the case. It shouldn't be difficult to implement irregular assessment periods, that will reflect a lack of strategy towards management advice.
+	\item Over-catch - it's implemented with two distinct Implementation Error Models (IEM), a constant ratio and a ratio that decreases linearly with the increase in TAC. The idea is that over-catch increases with the decrease in the TAC, which seems more realistic that keeping over-catch with a constant ratio.  
+\end{itemize}     
 
 \begin{table}[h]
 \caption{Simulation scenarios}
@@ -117,6 +133,8 @@ loaded via a namespace (and not attached):
 \hline
 \end{longtable}\end{table}
 
+\section{Results}
+
 \begin{figure}[H]
 \centering
 \includegraphics{MSE-004}
@@ -144,6 +162,10 @@ loaded via a namespace (and not attached):
 \caption{Projections with bias on catches and index}
 \label{fig:2Bias}
 \end{figure}
+
+\section{Discussion}
+
+This simulation study considers a TAC management system. It's not clear what would happen in a effort management system. Most likely the IEM could be implemented through limitations in effort or changes in catchability. However, considering DGMARE's comments on the enforcement of logbooks and future e-logbooks, there is the expectation that catches can be controlled.
 
 \end{document}
 
